# libvarnam-ibus

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  todo.txt
common/: CMakeLists.txt  engine-util.c  engine-util.h
debian/: postinst
engine/: CMakeLists.txt  engine.c  main.c  varnam.ml-inscript.xml  varnam.xml  varnam.xml.in  varnamd_proxy.c  varnamd_proxy.h
preferences/: CMakeLists.txt  prefs.c  prefs.glade
src/: CMakeLists.txt  engine.c  engine.h  ibus-engine-varnam  main.c  varnam.xml
sync/: CMakeLists.txt  sync.c
